# SatSentry

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker-build.yml
app/: __init__.py  routes.py
app/btc_addr_gen/: __init__.py
app/btc_addr_gen/core/: __init__.py  address_generator.py  key_types.py
app/btc_addr_gen/utils/: __init__.py  validation.py
app/services/: address_monitor.py  extended_key_manager.py  mempool_api.py  notification.py  scheduler.py  settings.py
app/static/css/: styles.css
app/static/js/: main.js
app/templates/: add_address.html  addresses.html  base.html  index.html  settings.html
tests/: __init__.py  test_address_monitor.py  test_extended_key_manager.py  test_notification.py  test_xpub_derivation.py
